fix spacing

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -51,6 +51,10 @@
             justify-content: space-between;
         }
 
+        @include desktop {
+            padding-bottom: 2.25rem;
+        }
+
     }
 
     &__bottom {
